--- a/cli/Makefile
+++ b/cli/Makefile
@@ -40,7 +40,7 @@ CXXFLAGS = -Wall -O -std=c++14 -I../src $(DEBUG_FLAGS)
 CPPFLAGS = -MMD
 
 OBJS_com = cli_listing.o bin_memory.o error_reporter.o file_reader.o file_printer.o \
-	   bin_formatter.o intel_hex.o moto_srec.o str_buffer.o str_scanner.o \
+	   bin_decoder.o bin_encoder.o intel_hex.o moto_srec.o str_buffer.o str_scanner.o \
 	   $(foreach a,$(ARCHS),$(OBJS_$(a)))
 OBJS_asm = asm.o asm_base.o asm_driver.o asm_directive.o value_parser.o function_store.o \
 	   $(foreach a,$(ARCHS),$(if $(wildcard ../src/asm_$(a).cpp),asm_$(a).o))
