[ASM] Make Assembler option generic

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -41,6 +41,7 @@ CPPFLAGS = -MMD
 
 OBJS_com = list_formatter.o bin_memory.o error_reporter.o file_reader.o file_printer.o \
 	   bin_decoder.o bin_encoder.o intel_hex.o moto_srec.o str_buffer.o str_scanner.o \
+           option_base.o \
 	   $(foreach a,$(ARCHS),$(OBJS_$(a)))
 OBJS_asm = asm.o asm_base.o asm_driver.o asm_directive.o value_parser.o function_store.o \
 	   $(foreach a,$(ARCHS),$(if $(wildcard ../src/asm_$(a).cpp),asm_$(a).o))
