--- a/test/Makefile
+++ b/test/Makefile
@@ -36,12 +36,12 @@ CXXFLAGS = -Wall -std=c++14 -O $(INCLUDES) $(DEBUG_FLAGS)
 CPPFLAGS = -MMD
 
 OBJS_test = array_memory.o test_asserter.o error_reporter.o
-OBJS_gen  = dis_base.o value_formatter.o array_memory.o tokenized_text.o \
-	    list_formatter.o error_reporter.o str_buffer.o str_scanner.o
+OBJS_gen  = dis_base.o value_formatter.o array_memory.o tokenized_text.o list_formatter.o \
+            option_base.o error_reporter.o str_buffer.o str_scanner.o
 OBJS_asm  = asm_base.o test_asm_helper.o value_parser.o str_buffer.o str_scanner.o \
             option_base.o
 OBJS_dis  = dis_base.o test_dis_helper.o value_formatter.o str_buffer.o str_scanner.o \
-            array_memory.o
+            option_base.o array_memory.o
 OBJS_expr = test_expr_helper.o test_asserter.o error_reporter.o \
             value_parser.o value_formatter.o str_buffer.o str_scanner.o
 $(eval $(foreach a,$(ARCHS),$(call objs-arch,$(a))))
