[i8080] Add V30EMU reference test source

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -50,7 +50,7 @@ TGT_mc6805  = mc68hc05
 TGT_mos6502 = mos6502 g65sc02 r65c02 w65c02s w65c816
 TGT_i8048   = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051   = i8051
-TGT_i8080   = i8080 i8085
+TGT_i8080   = i8080 i8085 v30emu
 TGT_i8096   = i8096
 TGT_z80     = z80 i8080_z80syn i8085_z80syn
 TGT_z8      = z8 z86c z88
@@ -89,6 +89,7 @@ CPU_msm80c48 = msm80c48
 CPU_i8051    = 8051
 CPU_i8080    = 8080
 CPU_i8085    = 8085
+CPU_v30emu   = V30EMU
 CPU_i8096    = 8096
 CPU_z80      = Z80
 CPU_i8080_z80syn = 8080
