[V30EMU] Add auto generated test source

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -52,7 +52,7 @@ TGT_i8048   = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051   = i8051
 TGT_i8080   = i8080 i8085 v30emu
 TGT_i8096   = i8096
-TGT_z80     = z80 i8080_z80syn i8085_z80syn
+TGT_z80     = z80 i8080_z80syn i8085_z80syn v30emu_z80syn
 TGT_z8      = z8 z86c z88
 TGT_tlcs90  = tlcs90
 TGT_ins8060 = ins8060
@@ -94,6 +94,7 @@ CPU_i8096    = 8096
 CPU_z80      = Z80
 CPU_i8080_z80syn = 8080
 CPU_i8085_z80syn = 8085
+CPU_v30emu_z80syn = V30EMU
 CPU_z8       = Z8601
 CPU_z86c     = Z86C40
 CPU_z88      = Z88C00
