[Driver/TEST] Add DisFormatter unit test and fix setOrigin

--- a/driver/test/Makefile
+++ b/driver/test/Makefile
@@ -15,7 +15,7 @@
 help:
 	@echo '"make test"     run tests of libasm::driver'
 
-TESTS = test_helpers test_bin_memory test_intel_hex test_moto_srec
+TESTS = test_helpers test_bin_memory test_intel_hex test_moto_srec test_dis_formatter
 
 .PHONY:: help test clean clean-objs
 
@@ -23,6 +23,8 @@ clean: clean-objs
 	-rm -f $(BINS)
 clean-objs:
 	-rm -f *.o *.d *~
+
+include ../../src/Makefile.arch
 
 vpath %.cpp ../../driver
 vpath %.cpp ../../src
@@ -33,10 +35,12 @@ CPPFLAGS = -MMD -I../../driver -I../../src -I../../test
 
 OBJS_common = test_driver_helper.o test_asserter.o error_reporter.o str_scanner.o
 OBJS_encdec = bin_encoder.o bin_decoder.o intel_hex.o moto_srec.o bin_memory.o
-OBJS = $(OBJS_common) $(TESTS:=.o)
+OBJS_formatter = list_formatter.o
+OBJS_dis = dis_base.o value_formatter.o option_base.o str_buffer.o bin_memory.o \
+           $(foreach a,$(ARCHS),$(if $(wildcard ../../src/dis_$(a).cpp),dis_$(a).o $(OBJS_$(a))))
 BINS = $(TESTS)
 
--include $(OBJS:.o=.d)
+-include $(wildcard *.d)
 
 define test-rule # test
 test:: $(1)
@@ -45,13 +49,16 @@ test:: $(1)
 endef
 $(eval $(foreach t,$(TESTS),$(call test-rule,$(t))))
 
-test_helpers: test_helpers.o $(OBJS_common)
+test_helpers: test_helpers.o bin_memory.o $(OBJS_common)
 	$(CXX) -o $@ $^
 test_bin_memory: test_bin_memory.o bin_memory.o $(OBJS_common)
 	$(CXX) -o $@ $^
+
 test_intel_hex: test_intel_hex.o $(OBJS_encdec) $(OBJS_common)
 	$(CXX) -o $@ $^
 test_moto_srec: test_moto_srec.o $(OBJS_encdec) $(OBJS_common)
+	$(CXX) -o $@ $^
+test_dis_formatter: test_dis_formatter.o $(OBJS_formatter) $(OBJS_common) $(OBJS_dis)
 	$(CXX) -o $@ $^
 
 # Local Variables:
