[Driver/TEST] Add AsmFormatter unit test

--- a/driver/test/Makefile
+++ b/driver/test/Makefile
@@ -15,7 +15,8 @@
 help:
 	@echo '"make test"     run tests of libasm::driver'
 
-TESTS = test_helpers test_bin_memory test_intel_hex test_moto_srec test_dis_formatter
+TESTS = test_helpers test_bin_memory test_intel_hex test_moto_srec \
+        test_asm_formatter test_dis_formatter
 
 .PHONY:: help test clean clean-objs
 
@@ -35,8 +36,12 @@ CPPFLAGS = -MMD -I../../driver -I../../src -I../../test
 
 OBJS_common = test_driver_helper.o test_asserter.o error_reporter.o str_scanner.o
 OBJS_encdec = bin_encoder.o bin_decoder.o intel_hex.o moto_srec.o bin_memory.o
-OBJS_formatter = list_formatter.o
-OBJS_dis = dis_base.o value_formatter.o option_base.o str_buffer.o bin_memory.o dis_formatter.o \
+OBJS_formatter = list_formatter.o value_formatter.o
+OBJS_asm = asm_base.o value_parser.o option_base.o asm_driver.o asm_directive.o \
+           function_store.o str_buffer.o bin_memory.o bin_encoder.o bin_decoder.o \
+           moto_srec.o intel_hex.o \
+           $(foreach a,$(ARCHS),$(if $(wildcard ../../src/asm_$(a).cpp),asm_$(a).o $(OBJS_$(a))))
+OBJS_dis = dis_base.o dis_formatter.o option_base.o bin_memory.o str_buffer.o \
            $(foreach a,$(ARCHS),$(if $(wildcard ../../src/dis_$(a).cpp),dis_$(a).o $(OBJS_$(a))))
 BINS = $(TESTS)
 
@@ -56,6 +61,8 @@ test_bin_memory: test_bin_memory.o bin_memory.o $(OBJS_common)
 test_intel_hex: test_intel_hex.o $(OBJS_encdec) $(OBJS_common)
 	$(CXX) -o $@ $^
 test_moto_srec: test_moto_srec.o $(OBJS_encdec) $(OBJS_common)
+	$(CXX) -o $@ $^
+test_asm_formatter: test_asm_formatter.o $(OBJS_formatter) $(OBJS_common) $(OBJS_asm)
 	$(CXX) -o $@ $^
 test_dis_formatter: test_dis_formatter.o $(OBJS_formatter) $(OBJS_common) $(OBJS_dis)
 	$(CXX) -o $@ $^
