[TEST] Add ASM_FLAGS for passing options to assembler

--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -73,7 +73,7 @@ ASM_OUTS  = $(foreach f,$(ASM_TESTS),$(f).$(call out-ext,$(f)))
 define asm-rule # source stem suffix option
 .PHONY:: asm-$(2).$(3)
 asm-$(2).$(3): $(1)
-	$(ASM) $(4) -o $(2).$(3) -l $(2).lst $$^
+	$$(ASM) $$(ASM_FLAGS) $(4) -o $(2).$(3) -l $(2).lst $$^
 
 endef
 $(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f).asm,$(f),$(call out-ext,$(f)),$(call asm-opt,$(f)))))
@@ -93,7 +93,7 @@ endef
 define asl-rule # source stem suffix option
 .PHONY:: asl-$(2).$(3)
 asl-$(2).$(3): $(1)
-	asl $$(ASL_FLAGS) -L $$^ && p2hex $$(P2HEX_FLAGS) $(4) $(2).p $(2).$(3)
+	$$(ASL) $$(ASL_FLAGS) -L $$^ && p2hex $$(P2HEX_FLAGS) $(4) $(2).p $(2).$(3)
 
 endef
 $(eval $(foreach f,$(ASL_TESTS),$(call asl-rule,$(call asl-file,$(f)),$(f),$(call out-ext,$(f)),$(call asl-opt,$(f)))))
