--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - devel
     tags-ignore:
       - '*.*.*'
     paths-ignore:
@@ -12,6 +13,11 @@ on:
       - "**/*.md"
       - "**/*.txt"
       - "library.*"
+      - "**/*.asm"
+      - "**/*.inc"
+      - "**/*.hex"
+      - "**/*.s19"
+      - "**/*.s28"
   pull_request:
 
 jobs:
