--- a/test/unittest/Makefile
+++ b/test/unittest/Makefile
@@ -28,7 +28,7 @@ vpath %.cpp ../../src
 vpath %.cpp ../../test
 
 CXXFLAGS = -std=c++14 -Wall -O $(DEBUG_FLAGS)
-CPPFLAGS = -MMD -I../../src -I../../test
+CPPFLAGS = -I../../src -I../../test -MD -MF $@.d
 
 OBJS_common = test_src_helper.o test_asserter.o error_reporter.o
 OBJS = $(OBJS_common) $(TESTS:=.o)
