[Z80] Make reference source as GNU assembler compatible

--- a/test/Makefile.gas
+++ b/test/Makefile.gas
@@ -74,6 +74,14 @@
 	| tr -d '\015' > $@
 	m6811-elf-objdump -m m68hc11 -D $@ > $(@:.s19=.dis)
 
+# Z80 target
+%_z80.hex: %_z80.gas
+	z80-elf-as -march=z80 --warn -o $(@:.hex=.p) -al=$(@:.hex=.lst) $^
+	z80-elf-ld --entry=0 -section-start=.text=0x0100 -o $(@:.hex=.o) $(@:.hex=.p)
+	z80-elf-objcopy -I elf32-z80 -O ihex $(@:.hex=.o) /dev/stdout \
+	| tr -d '\015' > $@
+	z80-elf-objdump -mz80 -D $(@:.hex=.o) > $(@:.hex=.dis)
+
 # Local Variables:
 # mode: makefile-gmake
 # End:
