[F3850] Add F3850 disassembler support

--- a/library.properties
+++ b/library.properties
@@ -3,10 +3,10 @@ version=1.6.28
 author=Tadashi G. Takaoka
 maintainer=Tadashi G. Takaoka <tadashi.g.takaoka@gmail.com>
 sentence=Cross assembler and disassembler for retro CPUs
-paragraph=With this, you can integrate assembler or disassembler into your sketch. Supported CPUs are MC6800, MC6805, MC6809, MC68HC11, MOS6502, i8048, i8051, i8080, Z80, Z8, TLCS90, INS8060, INS8070, CDP1802, SCN2650, TMS32010, TMS9900, i8086, i8096, MC68000, Z8000, NS32032, MN1610
+paragraph=With this, you can integrate assembler or disassembler into your sketch. Supported CPUs are MC6800, MC6805, MC6809, MC68HC11, MOS6502, i8048, i8051, i8080, Z80, Z8, TLCS90, INS8060, INS8070, CDP1802, SCN2650, F3850, TMS32010, TMS9900, i8086, i8096, MC68000, Z8000, NS32032, MN1610
 category=Other
 url=https://github.com/tgtakaoka/libasm
 architectures=*
 license=Apache-2.0
 dot_a_linkage=true
-includes=asm_mc6809.h,dis_mc6809.h,asm_mc6800.h,dis_mc6800.h,asm_mc6805.h,dis_mc6805.h,asm_mos6502.h,dis_mos6502.h,asm_i8048.h,dis_i8048.h,asm_i8051.h,dis_i8051.h,asm_i8080.h,dis_i8080.h,asm_z80.h,dis_z80.h,asm_z8.h,dis_z8.h,asm_tlcs90.h,dis_tlcs90.h,asm_ins8060.h,dis_ins8060.h,asm_ins8070.h,dis_ins8070.h,asm_cdp1802.h,dis_cdp1802.h,asm_scn2650.h,dis_scn2650.h,asm_tms32010.h,dis_tms32010.h,asm_tms9900.h,dis_tms9900.h,asm_i8086.h,dis_i8086.h,asm_i8096.h,dis_i8096.h,asm_mc68000.h,dis_mc68000.h,asm_z8000.h,dis_z8000.h,asm_ns32000.h,dis_ns32000.h,asm_mn1610.h,dis_mn1610.h
+includes=asm_mc6809.h,dis_mc6809.h,asm_mc6800.h,dis_mc6800.h,asm_mc6805.h,dis_mc6805.h,asm_mos6502.h,dis_mos6502.h,asm_i8048.h,dis_i8048.h,asm_i8051.h,dis_i8051.h,asm_i8080.h,dis_i8080.h,asm_z80.h,dis_z80.h,asm_z8.h,dis_z8.h,asm_tlcs90.h,dis_tlcs90.h,asm_ins8060.h,dis_ins8060.h,asm_ins8070.h,dis_ins8070.h,asm_cdp1802.h,dis_cdp1802.h,asm_scn2650.h,dis_scn2650.h,dis_f3850.h,asm_tms32010.h,dis_tms32010.h,asm_tms9900.h,dis_tms9900.h,asm_i8086.h,dis_i8086.h,asm_i8096.h,dis_i8096.h,asm_mc68000.h,dis_mc68000.h,asm_z8000.h,dis_z8000.h,asm_ns32000.h,dis_ns32000.h,asm_mn1610.h,dis_mn1610.h
