--- a/examples/Makefile
+++ b/examples/Makefile
@@ -19,7 +19,7 @@ help:
 
 EXAMPLES = mc6800 mc6809 mos6502 i8048 i8051 i8080 z80 z8 tlcs90 \
 	   ins8060 ins8070 cdp1802 tms32010 i8086 i8096 mc68000 \
-           scn2650 tms9900 z8000 ns32000 mn1610
+           scn2650 f3850 tms9900 z8000 ns32000 mn1610
 
 pio: update $(EXAMPLES)
 	for ex in $(EXAMPLES); do \
