[ASM] Add Zilog operators to Z8 and Z8000

--- a/test/Makefile
+++ b/test/Makefile
@@ -72,7 +72,7 @@ endef
 $(eval $(foreach a,$(ARCHS),$(call test-rule,$(a))))
 
 # make rule for testing expression.
-EXPRS = base motorola intel national fairchild
+EXPRS = base motorola intel national fairchild zilog
 define test-expr # expr
 test_expr_$(1): test_expr_$(1).o $$(OBJS_expr) $$(OBJS_test)
 	$$(CXX) -o $$@ $$(CXXFLAGS) $$^
