[TMS7000] Add TMS7000 assembler support

--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -46,6 +46,7 @@ jobs:
           - scn2650
           - tlcs90
           - tms32010
+          - tms7000
           - tms9900
           - z8
           - z80
