--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -65,7 +65,7 @@ $(eval $(foreach a,$(ARCHS),$(foreach t,$(TGT_$(a)),\
 generate: clean-gen $(GEN_OUTS)
 
 ASM=../../cli/asm
-$(ASM):
+$(ASM)-refresh:
 	+$(MAKE) -C ../../cli asm
 
 ASM_TESTS = $(patsubst %.asm,%,$(wildcard gen_*.asm))
@@ -78,7 +78,7 @@ asm-$(2).$(3): $(1)
 endef
 $(eval $(foreach f,$(ASM_TESTS),$(call asm-rule,$(f).asm,$(f),$(call out-ext,$(f)),$(call asm-opt,$(f)))))
 
-asm-test: $(ASM) clean-asm $(ASM_OUTS:%=asm-%)
+asm-test: $(ASM)-refresh clean-asm $(ASM_OUTS:%=asm-%)
 clean-asm:
 	-rm -f $(ASM_OUTS)
 
